Documentation: Minor edit in the releases text
Signed-off-by: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>

--- a/docs/releases/3.1.6.rst
+++ b/docs/releases/3.1.6.rst
@@ -9,10 +9,10 @@ Changes
 
 * Improve index mirroring value clean up code to remove the spaces at the
   starts and at the end of directories. Closes again GitLab issue #520
-  Thanks to TheOneValen @ for the report.
+  Thanks to @TheOneValen for the report.
 * Improve index mirroring cache class to use the hash of the keys
   instead of the literal keys. Avoid warning about invalid key
-  characters. Closes GitLab issue #518. Thanks to TheOneValen @ for the
+  characters. Closes GitLab issue #518. Thanks to @TheOneValen for the
   report.
 * Only render the Template API view for authenticated users.
   Thanks rgarcia for the report.
