Switch to preparestatic (Closes: #593)
collectstatic failes on various test suite files which are not needed to
install Mayan EDMS. Switch over to preparestatic, which contains a
predefined ignore list.

--- a/docs/releases/3.2.rst
+++ b/docs/releases/3.2.rst
@@ -81,7 +81,7 @@ Migrate existing database schema with::
 
 Add new static media::
 
-    $ mayan-edms.py collectstatic --noinput
+    $ mayan-edms.py preparestatic --noinput
 
 The upgrade procedure is now complete.
 
